# image-triangulation

./: .gitignore  CMakeLists.txt  README.md  installs.txt  logs.txt  main.cpp  testing.txt  times.txt
cpp_code/: main.cpp
cpp_code/src/: CMakeLists.txt  matrix.cpp  triangle.cpp  triangle.hpp
cpp_code/tests/: pointTest  pointTest.cpp  triangleTest  triangleTest.cpp
cpp_version/headers/: matrix.hpp  point.hpp  segment.hpp  triangle.hpp
cpp_version/src/: matrix.cpp  point.cpp  segment.cpp  triangle.cpp
cpp_version/tests/: matrixTest  matrixTest.cpp  pointTest  pointTest.cpp  segmentTest  segmentTest.cpp  triangleTest  triangleTest.cpp
cuda/: CMakeLists.txt  constant.cu  constant.cuh  main.cu  matrix.cu  matrix.cuh  parallelInt.cu  parallelInt.cuh  parallelInt.h  pixel.cu  pixel.cuh  point.cu  point.cuh  segment.cu  segment.cuh  triangle.cu  triangle.cuh
cuda/src/: CMakeLists.txt  parallelInt.cu  parallelInt.cuh  pixel.cu  pixel.cuh  segment.cuh
outputs/: CMakeLists.txt  apple_initial.tga  apple_triangulation.tga  crop.cpp
outputs/apple/: triangulation.tga
src/: CMakeLists.txt  approx.cpp  approx.h  constant.cpp  constant.cu  constant.cuh  constant.h  constant.hpp  doubleIntegral.cpp  doubleIntegral.hpp  lineIntegral.cpp  lineIntegral.hpp  linear.cpp  linear.h  matrix.cpp  matrix.cuh  matrix.hpp  parallelInt.cu  parallelInt.cuh  parallelInt.h  pixel.cpp  pixel.cu  pixel.cuh  pixel.hpp  point.cpp  point.cu  point.cuh  point.hpp  segment.cpp  segment.cu  segment.cuh  segment.hpp  simulator.cpp  simulator.h  triangle.cpp  triangle.cu  triangle.cuh  triangle.hpp
tests/: CMakeLists.txt  CMakeLists.txt.in  basicTest.cpp  constantTest.cpp  cudaTest.cpp  derivativeTest  derivativeTest.cpp  doubleIntegralTest.cpp  gradientTest.cpp  integratorTest.cpp  lineIntegralTest.cpp  matrixTest  matrixTest.cpp  pixelTest.cpp  pointTest.cpp  segmentTest  segmentTest.cpp  structureTest.cpp  triangleTest  triangleTest.cpp
